Added test for avAdmin.

--- a/avAdmin/question-directive/question-directive.html
+++ b/avAdmin/question-directive/question-directive.html
@@ -60,7 +60,7 @@
     <div class="input-group">
         <input type="text" class="form-control newopt" ng-enter="newOption()"/>
         <span class="input-group-btn">
-            <button class="btn btn-primary" type="button" ng-click="newOption()">
+            <button id="newopt" class="btn btn-primary" type="button" ng-click="newOption()">
                 <span class="glyphicon glyphicon-plus" aria-hidden="true"></span>
             </button>
         </span>
