minor cosmetic change in multi-question view

--- a/avBooth/multi-question-directive/multi-question-directive.html
+++ b/avBooth/multi-question-directive/multi-question-directive.html
@@ -64,7 +64,7 @@
 
       <!-- show available options and filter -->
       <div class="col-xs-12 col-sm-6">
-        <div class="pull-left padded-left hidden-xs">
+        <div class="pull-left hidden-xs">
           <h4 class="text-brand-success" ng-i18next="avBooth.questionAvailableOptionsTitle"></h4>
         </div>
         <div class="pull-right filter-input hidden-xs">
