avAdmin: createElection with authapi and agora-elections

--- a/avAdmin/election-form-directive/election-form-directive.html
+++ b/avAdmin/election-form-directive/election-form-directive.html
@@ -1,3 +1,4 @@
+<div avb-busy ng-if="loading"></div>
 <div class="container">
     <div class="av-admin-form">
         <div class="election-id" ng-if="id">id: <span ng-model="election.id"></span></div>
