--- a/index.html
+++ b/index.html
@@ -154,11 +154,11 @@
   <!-- Add New Component JS Above -->
 
   <div id="no-js">
-    La página está cargando, espera un momento por favor. Si tarda mucho, comprueba que tienes javascript activado, prueba con otro navegador web más actualizado, o contacto con nosotros en <a href="mailto:soportevotaciones@podemos.info">soportevotaciones@podemos.info</a>.
+    Page is taking some time to load, wait a moment please. If it takes too long, please check that you have javascript activated, try with another browser or contact us.
   </div>
 
   <div id="unsupported-browser">
-    Por motivos de seguridad, nuestro software de votación no tiene soporte de tu navegador. Por favor utiliza otro navegador web más actualizado (si usas Internet Explorer, a partir de la versión 9). Para cualquier duda, puedes contactarnos en <a href="mailto:soportevotaciones@podemos.info">soportevotaciones@podemos.info</a>.
+    For security reasons, your browser is unsupported. Please use a newer web browser (if you are using Internet Explorer, use version 9 or newer).
   </div>
 
   <div>
