--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -1,13 +1,35 @@
-<div class="navbar-unfixed-top text-center admintop">
+<nav class="navbar navbar-admin adminhead">
     <div class="container-fluid">
-        <div class="pull-right">
-            <span ng-bind="admin"></span> |
-            <a ui-sref="registration.logout()" ng-i18next="avRegistration.logout"></a>
+        <!-- Brand and toggle get grouped for better mobile display -->
+        <div class="navbar-header">
+          <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
+            <span class="sr-only">Toggle navigation</span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+            <span class="icon-bar"></span>
+          </button>
+          <a class="navbar-brand" href="/">Agora Voting</a>
         </div>
-        <div class="hidden unfixed-top-height"></div>
-        <h1 class="ng-binding">
-            <span ng-i18next="avAdmin.admin"></span> /
-            <span ng-i18next="avAdmin.elections"></span>
-        </h1>
+
+        <!-- Collect the nav links, forms, and other content for toggling -->
+        <div class="collapse navbar-collapse" id="navbar-collapse-1">
+          <ul class="nav navbar-nav navbar-right">
+            <li><a ng-i18next="avAdmin.topbar.home"></a></li>
+            <li><a ng-i18next="avAdmin.topbar.features"></a></li>
+            <li><a ng-i18next="avAdmin.topbar.help"></a></li>
+            <li class="signup"><a ng-i18next="avAdmin.topbar.freesignup"></a></li>
+            <li ng-if="!nologin"><a ng-i18next="avAdmin.topbar.login"></a></li>
+
+            <li class="dropdown">
+              <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
+              {{ deflang }}
+              <span class="caret"></span></a>
+              <ul class="dropdown-menu" role="menu">
+                <li><a ng-click="changeLang('en')">en</a></li>
+                <li><a  ng-click="changeLang('es')">es</a></li>
+              </ul>
+            </li>
+          </ul>
+        </div><!-- /.navbar-collapse -->
     </div>
-</div>
+</nav>
