--- a/index.html
+++ b/index.html
@@ -137,6 +137,7 @@
   <script src="avAdmin/elections-controller/elections-controller.js" class="app"></script>
   <script src="avAdmin/new-election-controller/new-election-controller.js" class="app"></script>
   <script src="avAdmin/edit-election-controller/edit-election-controller.js" class="app"></script>
+  <script src="avAdmin/login-controller/login-controller.js" class="app"></script>
   <script src="avAdmin/admin-service.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
