admin: Added footer directive

--- a/index.html
+++ b/index.html
@@ -129,6 +129,7 @@
 
   <!-- Admin -->
   <script src="avAdmin/init.js" class="app"></script>
+  <script src="avAdmin/admin-foot-directive/admin-foot-directive.js" class="app"></script>
   <script src="avAdmin/admin-head-directive/admin-head-directive.js" class="app"></script>
   <script src="avAdmin/elections-directive/elections-directive.js" class="app"></script>
   <script src="avAdmin/election-form-directive/election-form-directive.js" class="app"></script>
