--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -14,11 +14,15 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="navbar-collapse-1">
           <ul class="nav navbar-nav navbar-right">
-            <li><a ng-i18next="avAdmin.topbar.home"></a></li>
-            <li><a ng-i18next="avAdmin.topbar.features"></a></li>
-            <li><a ng-i18next="avAdmin.topbar.help"></a></li>
-            <li class="signup"><a ng-i18next="avAdmin.topbar.freesignup"></a></li>
+            <li ng-if="!admin"><a ng-i18next="avAdmin.topbar.home"></a></li>
+            <li ng-if="!admin"><a ng-i18next="avAdmin.topbar.features"></a></li>
+
+            <li><a><i class="fa fa-question-circle"></i></a></li>
+
+            <li class="signup" ng-if="!admin"><a ng-i18next="avAdmin.topbar.freesignup"></a></li>
             <li ng-if="!nologin"><a ng-i18next="avAdmin.topbar.login"></a></li>
+
+            <li ng-if="admin"><a ui-sref="registration.logout()"><i class="fa fa-power-off"></i></a></li>
 
             <li class="dropdown">
               <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-expanded="false">
