--- a/avAdmin/elections-controller/elections-controller.html
+++ b/avAdmin/elections-controller/elections-controller.html
@@ -1,7 +1,11 @@
 <div av-admin-head>
 </div>
 
-<div av-elections>
+<div class="container-fluid">
+    <div av-admin-sidebar active="elections" class="col-sm-3">
+    </div>
+    <div av-elections class="col-sm-9">
+    </div>
 </div>
 
 <div av-admin-foot>
