--- a/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
+++ b/avAdmin/admin-sidebar-directive/admin-sidebar-directive.html
@@ -1,8 +1,12 @@
 <ul class="nav nav-pills nav-stacked sidebar">
-  <li role="presentation" class="head" ng-class="{true: 'active', false: ''}[active=='elections']"><a href="#">Elections</a></li>
-  <li role="presentation" class="sub1"><a href="#">New election</a></li>
+  <li role="presentation" class="head" ng-class="{true: 'active', false: ''}[active=='elections']"><a ui-sref="admin.elections()">Elections</a></li>
+  <li role="presentation" class="sub1"><a ui-sref="admin.newelection()">New election</a></li>
   <li role="presentation" class="sub1"><a href="#">Import</a></li>
-  <li role="presentation" class="sub1"><a href="#">Current election</a></li>
+
+  <ul class="nav nav-pills nav-stacked sidebar" ng-if="current">
+    <li role="presentation" class="head"><a href="#">Current election</a></li>
+  </ul>
+
   <li role="presentation" class="head" ng-class="{true: 'active', false: ''}[active=='account']"><a href="#">Account</a></li>
   <li role="presentation" class="sub1"><a href="#">My account</a></li>
   <li role="presentation" class="sub1"><a href="#">Billing information</a></li>
