--- a/index.html
+++ b/index.html
@@ -140,6 +140,7 @@
   <script src="avAdmin/new-election-controller/new-election-controller.js" class="app"></script>
   <script src="avAdmin/edit-election-controller/edit-election-controller.js" class="app"></script>
   <script src="avAdmin/login-controller/login-controller.js" class="app"></script>
+  <script src="avAdmin/admin-controller/admin-controller.js" class="app"></script>
   <script src="avAdmin/admin-service.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
