--- a/index.html
+++ b/index.html
@@ -132,15 +132,23 @@
   <script src="avAdmin/admin-sidebar-directive/admin-sidebar-directive.js" class="app"></script>
   <script src="avAdmin/admin-foot-directive/admin-foot-directive.js" class="app"></script>
   <script src="avAdmin/admin-head-directive/admin-head-directive.js" class="app"></script>
-  <script src="avAdmin/elections-directive/elections-directive.js" class="app"></script>
-  <script src="avAdmin/election-form-directive/election-form-directive.js" class="app"></script>
-  <script src="avAdmin/questions-directive/questions-directive.js" class="app"></script>
-  <script src="avAdmin/question-directive/question-directive.js" class="app"></script>
-  <script src="avAdmin/elections-controller/elections-controller.js" class="app"></script>
-  <script src="avAdmin/new-election-controller/new-election-controller.js" class="app"></script>
-  <script src="avAdmin/edit-election-controller/edit-election-controller.js" class="app"></script>
   <script src="avAdmin/login-controller/login-controller.js" class="app"></script>
   <script src="avAdmin/admin-controller/admin-controller.js" class="app"></script>
+
+  <!-- admin directives -->
+  <script src="avAdmin/admin-directives/elquestions/elquestions.js" class="app"></script>
+  <script src="avAdmin/admin-directives/eltally/eltally.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elections/elections.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elcensus/elcensus.js" class="app"></script>
+  <script src="avAdmin/admin-directives/dashboard/dashboard.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elbasic/elbasic.js" class="app"></script>
+  <script src="avAdmin/admin-directives/elauth/elauth.js" class="app"></script>
+  <script src="avAdmin/admin-directives/billinginfo/billinginfo.js" class="app"></script>
+  <script src="avAdmin/admin-directives/billinghistory/billinghistory.js" class="app"></script>
+  <script src="avAdmin/admin-directives/account/account.js" class="app"></script>
+  <script src="avAdmin/admin-directives/import/import.js" class="app"></script>
+  <!-- endof admin directives -->
+
   <script src="avAdmin/admin-service.js" class="app"></script>
 
   <script src="test/test.js" class="app"></script>
