adding verifiable election and ballot locator links in election results

--- a/index.html
+++ b/index.html
@@ -115,6 +115,7 @@
   <script src="avElection/results-directive/results-directive.js" class="app"></script>
   <script src="avElection/plurality-at-large-results-directive/plurality-at-large-results-directive.js" class="app"></script>
   <script src="avElection/question-results-directive/question-results-directive.js" class="app"></script>
+  <script src="avElection/verify-results-directive/verify-results-directive.js" class="app"></script>
 
   <!-- registration -->
   <script src="avRegistration/init.js" class="app"></script>
