--- a/avElection/results-directive/results-directive.html
+++ b/avElection/results-directive/results-directive.html
@@ -10,6 +10,16 @@
     <div class="col-xs-6">
       <div class="pull-left">
         <p>
+          <a class="padding-right"
+            href="#election/{{election.id}}/ballot-locator">
+            <i class="fa fa-binoculars"></i>
+            <span ng-i18next="avElection.resultsDirective.ballotLocatorLink"></span>
+          </a>
+          <a class="padding-right"
+            href="#election/{{election.id}}/verify-results">
+            <i class="fa fa-fw fa-check-square-o"></i>
+            <span ng-i18next="avElection.resultsDirective.verifiableResultsLink"></span>
+          </a>
           <a
             href="{{electionDataUrl}}"
             target="_blank"
@@ -38,7 +48,7 @@
       </div>
     </div>
     <div class="col-xs-6">
-      <div class="pull-right">
+      <div class="pull-right padding-right">
         <a href="https://agoravoting.com" class="agoralogo" target="_blank"></a>
       </div>
     </div>
