minor cosmetic changes in verify results view

--- a/avElection/verify-results-directive/verify-results-directive.html
+++ b/avElection/verify-results-directive/verify-results-directive.html
@@ -29,7 +29,7 @@
   <div class="content avb-content">
     <div class="container">
       <div class="row">
-        <div class="col-xs-8 col-xs-offset-2 padded-left padded-right"
+        <div class="con-xs-12 col-sm-8 col-sm-offset-2 padded-left padded-right"
           ng-i18next="[i18next:html]({title: election.title, electionId: election.id})avElection.verifyResults.verifyText">
         </div>
       </div>
