--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
   <script src="bower_components/angular-cookies/angular-cookies.js" class="lib"></script>
   <script src="bower_components/i18next/i18next.js" class="lib"></script>
   <script src="bower_components/ng-i18next/dist/ng-i18next.js" class="lib"></script>
+  <script type='text/javascript' src='bower_components/ngInfiniteScroll/build/ng-infinite-scroll.min.js' class="lib"></script>
   <!-- Add New Bower Component JS Above -->
 
   <!-- JS from Vendor Components -->
