admin: election list real

--- a/avAdmin/admin-directives/elections/elections.html
+++ b/avAdmin/admin-directives/elections/elections.html
@@ -3,12 +3,12 @@
         <span>Elections</span>
     </h2>
 
-    <table role="table" class="table table-striped electionlist" infinite-scroll="loadMoreElections()" infinite-scroll-distance="0">
+    <table role="table" class="table table-bordered table-hover table-striped electionlist" infinite-scroll="loadMoreElections()" infinite-scroll-distance="0">
         <!-- header row -->
         <tr>
-            <th>
+            <th colspan="2">
                 <div class="input-group search">
-                  <input type="text" class="form-control" placeholder="{{'avAdmin.elections.filter' | i18next}}">
+                  <input type="text" class="form-control" ng-model="q" placeholder="{{'avAdmin.elections.filter' | i18next}}">
                   <span class="input-group-btn">
                     <button class="btn btn-default" type="button"><i class="fa fa-search"></i></button>
                   </span>
@@ -19,22 +19,31 @@
             <th></th>
         </tr>
 
-        <tr ng-repeat="election in elections">
+        <tr ng-repeat="election in elections | filter:q">
+            <th>
+                {{ election.id }}
+            </th>
             <td>
                 <strong>{{ election.title }}</strong> {{ election.description|truncate:150 }}
             </td>
             <td class="text-center">
                 <div class="dropdown">
                   <button class="btn btn-default dropdown-toggle" type="button" id="dropdownStatus" data-toggle="dropdown" aria-expanded="true">
-                    {{ election.status }}
+                    {{ election.status|i18next }}
                     <span class="caret"></span>
                   </button>
                   <ul class="dropdown-menu text-left" role="menu" aria-labelledby="dropdownStatus">
-                    <li role="presentation" ng-if="election.status == 'registered'"><a role="menuitem" tabindex="-1" href="#">Create</a></li>
-                    <li role="presentation" ng-if="election.status == 'created'"><a role="menuitem" tabindex="-1" href="#">Start voting</a></li>
-                    <li role="presentation" ng-if="election.status == 'voting'"><a role="menuitem" tabindex="-1" href="#">Stop voting</a></li>
-                    <li role="presentation" ng-if="election.status == 'stopped'"><a role="menuitem" tabindex="-1" href="#">Tally</a></li>
-                    <li role="presentation" ng-if="election.status == 'tally'"><a role="menuitem" tabindex="-1" href="#">Publish</a></li>
+                    <!-- registered -> created -> started -> stopped -> tally_ok -> results_ok -->
+                    <li role="presentation" ng-if="election.status == 'registered'">
+                        <a role="menuitem" tabindex="-1" href="#" ng-i18next>avAdmin.action.create</a></li>
+                    <li role="presentation" ng-if="election.status == 'created'">
+                        <a role="menuitem" tabindex="-1" href="#" ng-i18next>avAdmin.action.start</a></li>
+                    <li role="presentation" ng-if="election.status == 'started'">
+                        <a role="menuitem" tabindex="-1" href="#" ng-i18next>avAdmin.action.stop</a></li>
+                    <li role="presentation" ng-if="election.status == 'stopped'">
+                        <a role="menuitem" tabindex="-1" href="#" ng-i18next>avAdmin.action.tally</a></li>
+                    <li role="presentation" ng-if="election.status == 'tally_ok'">
+                        <a role="menuitem" tabindex="-1" href="#" ng-i18next>avAdmin.action.publish</a></li>
                   </ul>
                 </div>
             </td>
@@ -50,4 +59,5 @@
     </table>
     <div ng-if="loading" class="text-center bg-primary" ng-i18next>loading</div>
     <div ng-if="nomore" class="text-center bg-success" ng-i18next>nomore</div>
+    <div ng-if="error" class="text-center bg-danger">{{ error }}</div>
 </div>
