admin: Using translations for elections header

--- a/avAdmin/admin-directives/elections/elections.html
+++ b/avAdmin/admin-directives/elections/elections.html
@@ -1,6 +1,6 @@
 <div>
-    <h2>
-        <span>Elections</span>
+    <h2 ng-i18next>
+        avAdmin.sidebar.elections
     </h2>
 
     <table role="table" class="table table-bordered table-hover table-striped electionlist" infinite-scroll="loadMoreElections()" infinite-scroll-distance="0">
