--- a/avAdmin/admin-directives/import/import.html
+++ b/avAdmin/admin-directives/import/import.html
@@ -1,3 +1,10 @@
+<div avb-busy overlay ng-if="loading"></div>
+
 <div>
-    <h1>import</h1>
+    <h2 ng-i18next>avAdmin.sidebar.import</h2>
+
+    <p ng-i18next="[html]avAdmin.import.desc"> </p>
+
+    <input type="file" id="importfile" class="hidden" onchange="angular.element(this).scope().uploadFile(this)"/>
+    <button ng-click="selectFile()" class="btn btn-block btn-success" ng-i18next>avAdmin.import.file</button>
 </div>
