admin: Checking login status with authapi ping

--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -22,6 +22,7 @@
             <li class="signup" ng-if="!admin"><a ng-i18next="avAdmin.topbar.freesignup"></a></li>
             <li ng-if="!nologin"><a ng-i18next="avAdmin.topbar.login"></a></li>
 
+            <li ng-if="admin"><a ui-sref="registration.logout()"><i class="fa fa-user"></i> {{ admin }}</a></li>
             <li ng-if="admin"><a ui-sref="registration.logout()"><i class="fa fa-power-off"></i></a></li>
 
             <li class="dropdown">
