--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -1,3 +1,5 @@
 <div>
-    <h1>dashboard</h1>
+    <h2 ng-i18next>avAdmin.sidebar.dashboard</h2>
+    <h3 ng-bind="current.id"></h3>
+    <h3 ng-bind="current.title"></h3>
 </div>
