--- a/avAdmin/admin-directives/elections/elections.html
+++ b/avAdmin/admin-directives/elections/elections.html
@@ -53,7 +53,7 @@
                 {{ election.votes_percentage }}%
             </td>
             <td class="text-center">
-                <i class="fa fa-gear fa-lg"></i>
+                <a ui-sref="admin.dashboard({id: election.id})"><i class="fa fa-gear fa-lg"></i></a>
             </td>
         </tr>
     </table>
