--- a/avAdmin/admin-directives/dashboard/dashboard.html
+++ b/avAdmin/admin-directives/dashboard/dashboard.html
@@ -1,4 +1,4 @@
-<div>
+<div class="dashboard">
     <h2 ng-i18next>avAdmin.sidebar.dashboard</h2>
 
     <!-- dashboard status bar -->
@@ -7,11 +7,84 @@
             <div class="stick" ng-class="{'stickini': $first, 'stickend': $last}">
                 <i class="fa fa-sw fa-2x" ng-class="{true:'fa-check-circle', false:'fa-circle'}[index > $index]"></i>
             </div>
-            <div class="small" ng-i18next>{{ status }}</div>
+            <div class="small" ng-i18next ng-if="index > $index">{{ status }}</div>
             <button class="btn btn-success" ng-if="index == $index">
+                <div class="small" ng-i18next>{{ nextaction }}</div>
                 <strong ng-i18next>avAdmin.dashboard.donow</strong>
             </button>
         </div>
     </div>
     <!-- endof dashboard status bar -->
+
+    <!-- election info -->
+    <div class="row info">
+        <div class="col-sm-4 text-right">
+            <div class="block">
+                <strong>{{ election.votes|number }}</strong><br/>
+                <span ng-i18next>avAdmin.dashboard.votes</span>
+            </div>
+        </div>
+        <div class="col-sm-4 text-right">
+            <div class="block">
+                <strong>{{ election.census|number }}</strong><br/>
+                <span ng-i18next>avAdmin.dashboard.census</span>
+            </div>
+        </div>
+        <div class="col-sm-4 text-right">
+            <div class="block">
+                <span ng-i18next>avAdmin.dashboard.questions</span>
+                <strong>{{ election.questions.length }}</strong><br/>
+                <span ng-i18next>avAdmin.dashboard.answers</span>
+                <strong>{{ election.answers }}</strong>
+            </div>
+        </div>
+    </div>
+    <!-- endof election info -->
+
+    <!-- general info -->
+    <div class="row general">
+        <div class="col-md-6">
+            <div class="well">
+                <dl class="dl-horizontal">
+                  <dt ng-i18next>avAdmin.dashboard.status</dt>
+                  <dd ng-i18next>{{ election.status }}</dd>
+                  <dt ng-i18next>avAdmin.dashboard.authentication</dt>
+                  <dd>{{ authentication }}</dd>
+                  <dt ng-i18next>avAdmin.dashboard.electionid</dt>
+                  <dd>{{ election.id }}</dd>
+                </dl>
+            </div>
+            <!-- TODO make it real -->
+            <div class="well text-right">
+                <a href="">Election public site</a><br/>
+                <a href="">Preview voting booth</a><br/>
+                <a href="">Embed election</a>
+            </div>
+
+            <button class="btn btn-block btn-lg btn-success" ng-if="nextaction" ng-i18next>{{ nextaction }}</button>
+        </div>
+        <!-- authorities -->
+        <div class="col-md-6">
+            <div class="well">
+                <h4>
+                    <span ng-i18next>avAdmin.dashboard.authorities</span>
+                    <span>{{ election.auths.length}}</span>
+                </h4>
+
+                <ul class="list-group">
+                    <li class="authority list-group-item" ng-repeat="auth in election.auths">
+                        <span class="badge" ng-if="auth == election.director"><i class="fa fa-sitemap"></i></span>
+                        {{ auth }}
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </div>
+    <!-- endof general -->
+
+    <!-- results -->
+    <h2 ng-i18next>avAdmin.dashboard.results</h2>
+    <!-- TODO -->
+
+    <!-- endof results -->
 </div>
