Updated booth voting url to new format

--- a/avBooth/booth.html
+++ b/avBooth/booth.html
@@ -2,7 +2,7 @@
   election-id="{{electionId}}"
   base-url="{{baseUrl}}"
   voter-id="{{voterId}}"
-  authorization-header="{{hmacMessage}}:{{hmacHash}}"
+  authorization-header="khmac:///sha-256;{{hmacHash}}/{{hmacMessage}}"
   config="{{config}}"
   pre-check="checkElectionUrl()">
 </div>
