--- a/avAdmin/admin-head-directive/admin-head-directive.html
+++ b/avAdmin/admin-head-directive/admin-head-directive.html
@@ -1,5 +1,5 @@
 <nav class="navbar navbar-admin adminhead">
-    <div class="container-fluid">
+    <div ng-class="{'container-fluid': admin, 'container': !admin}">
         <!-- Brand and toggle get grouped for better mobile display -->
         <div class="navbar-header">
           <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#navbar-collapse-1">
@@ -8,7 +8,7 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="/">Agora Voting</a>
+          <a class="navbar-brand" href="https://agoravoting.com"></a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
