--- a/avRegistration/login-directive/login-directive.html
+++ b/avRegistration/login-directive/login-directive.html
@@ -45,7 +45,7 @@
           </div>
         </form>
     </div>
-    <div class="col-sm-5 col-sm-offset-1">
+    <div class="col-sm-5 col-sm-offset-1 hidden-xs">
       <h3 class="help-h3" ng-i18next="avRegistration.notRegisteredYet"></h3>
       <p>
         <a href="#" ng-i18next="avRegistration.registerHere" ng-click="goSignup()" tabindex="5"></a><br/>
